# sedolist

./: .gitignore  LICENSE  README.md  ai_logic.py  app.py  auth.py  check_models.py  create_user.py  database.py  docker-compose.yml  fix_db_schema.py  init_db.py  mail_service.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
tests/: conftest.py  test_ai_logic.py  test_auth.py  test_auth_session.py  test_database.py
